@@ -1,4 +1,8 @@
-﻿drkns 20.03.2016 00:41:42 +0200 - build 4584
+﻿drkns 20.03.2016 11:57:40 +0200 - build 4585
+
+1. Продолжение 4584.
+
+drkns 20.03.2016 00:41:42 +0200 - build 4584
 
 1. Убираем костыли, щедро расставленные повсеместно для поддержки VS2010 и компании.
 
